--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
       >
         <img src="images/parallelogram.png" alt="" />
         <h2>Parallelogram</h2>
-        <p>Area (A) = 0.5 x b x h</p>
+        <p>Area (A) = b x h</p>
         <div class="m-5">
           <input
             id="parallelogram-b"
@@ -91,7 +91,7 @@
           />cm
         </div>
 
-        <button id="btn-calculate" class="bg-sky-500 w-3/4 rounded-md">
+        <button id="btn-parallelogram" class="bg-sky-500 w-3/4 rounded-md">
           Calculate
         </button>
       </section>
@@ -101,6 +101,10 @@
         <ol>
           <li id="show-triangle"></li>
           <li id="show-rectangle"></li>
+          <li id="show-parallelogram"></li>
+          <li id="show-rhombus"></li>
+          <li id="show-pentagon"></li>
+          <li id="show-ellipse"></li>
         </ol>
       </section>
       <!-- Rhombus start -->
@@ -109,23 +113,23 @@
       >
         <img src="images/rhombus.png" alt="" />
         <h2>Rhombus</h2>
-        <p>Area (A) = 0.5 x b x h</p>
+        <p>Area (A) = 0.5 x d1 x d2</p>
         <div class="m-5">
           <input
-            id="Rhombus-b"
+            id="rhombus-b"
             class="bg-slate-100 w-1/4 inline"
             type="text"
             placeholder="b"
           />cm
           <input
-            id="Rhombus-h"
+            id="rhombus-h"
             class="bg-slate-100 w-1/4 inline"
             type="text"
             placeholder="h"
           />cm
         </div>
 
-        <button id="btn-calculate" class="bg-sky-500 w-3/4 rounded-md">
+        <button id="btn-rhombus" class="bg-sky-500 w-3/4 rounded-md">
           Calculate
         </button>
       </section>
@@ -151,7 +155,7 @@
           />cm
         </div>
 
-        <button id="btn-calculate" class="bg-sky-500 w-3/4 rounded-md">
+        <button id="btn-pentagon" class="bg-sky-500 w-3/4 rounded-md">
           Calculate
         </button>
       </section>
@@ -161,23 +165,23 @@
       >
         <img src="images/ellipse.png" alt="" />
         <h2>Ellipse</h2>
-        <p>Area (A) = 0.5 x b x h</p>
+        <p>Area (A) = &pi;ab</p>
         <div class="m-5">
           <input
-            id="Ellipse-b"
+            id="ellipse-b"
             class="bg-slate-100 w-1/4 inline"
             type="text"
             placeholder="b"
           />cm
           <input
-            id="Ellipse-h"
+            id="ellipse-h"
             class="bg-slate-100 w-1/4 inline"
             type="text"
             placeholder="h"
           />cm
         </div>
 
-        <button id="btn-calculate" class="bg-sky-500 w-3/4 rounded-md">
+        <button id="btn-ellipse" class="bg-sky-500 w-3/4 rounded-md">
           Calculate
         </button>
       </section>
