--- a/index.html
+++ b/index.html
@@ -13,7 +13,9 @@
         <h1>Interactive</h1>
         <h3>Geometry Genius</h3>
       </section>
-      <section class="bg-sky-500 p-2 rounded-md">Blog</section>
+      <section class="bg-sky-500 p-2 rounded-md">
+        <a href="blog.html">Blog</a>
+      </section>
     </header>
 
     <main class="grid grid-cols-4 p-5">
