--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       </section>
     </header>
 
-    <main class="grid grid-cols-4 p-5">
+    <main class="grid grid-cols-4 p-5 gap-1">
       <!-- triangle start -->
       <section
         class="rounded-md p-5 border-2 border-slate-100 flex flex-col items-center"
@@ -26,7 +26,7 @@
         <img src="images/triangle.png" alt="" />
         <h2>Triangle</h2>
         <p>Area (A) = 0.5 x b x h</p>
-        <div class="m-5">
+        <div class="m-5 flex justify-center gap-2">
           <input
             id="triangle-b"
             class="bg-slate-100 w-1/4 inline"
@@ -52,7 +52,7 @@
         <img src="images/rectangle.png" alt="" />
         <h2>Rectangle</h2>
         <p>Area (A) = W x I</p>
-        <div class="m-5">
+        <div class="m-5 flex justify-center gap-2">
           <input
             id="rectangle-b"
             class="bg-slate-100 w-1/4 inline"
@@ -78,7 +78,7 @@
         <img src="images/parallelogram.png" alt="" />
         <h2>Parallelogram</h2>
         <p>Area (A) = b x h</p>
-        <div class="m-5">
+        <div class="m-5 flex justify-center gap-2">
           <input
             id="parallelogram-b"
             class="bg-slate-100 w-1/4 inline"
@@ -98,7 +98,7 @@
         </button>
       </section>
       <!-- area calc -->
-      <section>
+      <section class="text-center">
         <p class="underline underline-offset-8">Area Calculation</p>
         <ol>
           <li id="show-triangle"></li>
@@ -116,7 +116,7 @@
         <img src="images/rhombus.png" alt="" />
         <h2>Rhombus</h2>
         <p>Area (A) = 0.5 x d1 x d2</p>
-        <div class="m-5">
+        <div class="m-5 flex justify-center gap-2">
           <input
             id="rhombus-b"
             class="bg-slate-100 w-1/4 inline"
@@ -142,7 +142,7 @@
         <img src="images/pentagon.png" alt="" />
         <h2>pentagon</h2>
         <p>Area (A) = 0.5 x b x h</p>
-        <div class="m-5">
+        <div class="m-5 flex justify-center gap-2">
           <input
             id="pentagon-b"
             class="bg-slate-100 w-1/4 inline"
@@ -168,7 +168,7 @@
         <img src="images/ellipse.png" alt="" />
         <h2>Ellipse</h2>
         <p>Area (A) = &pi;ab</p>
-        <div class="m-5">
+        <div class="m-5 flex justify-center gap-2">
           <input
             id="ellipse-b"
             class="bg-slate-100 w-1/4 inline"
